Added midi responsiveness.

--- a/public/css/src/main.scss
+++ b/public/css/src/main.scss
@@ -1,5 +1,7 @@
 body {
 	margin: 0;
+	background: black;
+	text-align: center;
 }
 
 .btn .sub-title {
@@ -8,5 +10,5 @@ body {
 
 div video {
 	max-width:100%;
-	height: 80vh;
+	height: 99vh;
 }
