--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,11 @@
 body {
-  margin: 0; }
+  margin: 0;
+  background: black;
+  text-align: center; }
 
 .btn .sub-title {
   margin-left: 10px; }
 
 div video {
   max-width: 100%;
-  height: 80vh; }
+  height: 99vh; }
