--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   background: black;
-  text-align: center; }
+  text-align: center;
+  overflow: hidden; }
 
 .btn .sub-title {
   margin-left: 10px; }
@@ -9,3 +10,6 @@ body {
 div video {
   max-width: 100%;
   height: 99vh; }
+
+div .video2 {
+  display: none; }
